# YAYD

./: .env.example  .gitignore  LICENSE  README.md  TRICKS.MD  pyproject.toml
scripts/: debug_gemini_format.py  debug_gemini_tts.py  debug_tts.py  debug_tts_bv001.py  debug_tts_fix.py  download_models.py  qwen_tts_speed_compare.py  qwen_tts_worker.py  resplit_by_diarization.py  tune_diarization.py  tune_diarization_params.py  verify_gemini_wav.py
scripts/biliapi/: login.mjs  package.json  upload.mjs
src/youdub/: app.py  cn_tx.py  config.py  interrupts.py  models.py  pipeline.py  speech_rate.py  text_norm_zh.py  text_split.py  utils.py
src/youdub/core/: __init__.py  cn_tx.py  interrupts.py  pipeline.py  utils.py
src/youdub/core/steps/: __init__.py  download.py  generate_info.py  separate_vocals.py  synthesize_speech.py  synthesize_video.py  transcribe.py  translate.py  upload.py
src/youdub/steps/: __init__.py  adaptive_align.py  download.py  generate_info.py  optimize_transcript.py  separate_vocals.py  synthesize_speech.py  synthesize_video.py  synthesize_video_audio.py  synthesize_video_fs.py  synthesize_video_subtitles.py  transcribe.py  transcribe_asr_run.py  transcribe_assets.py  transcribe_compat.py  transcribe_segments.py  transcribe_speaker_repair.py  transcribe_subtitles.py  translate.py  tts_bytedance.py  tts_gemini.py  tts_prompt.py  tts_qwen_worker.py  tts_speaker_ref.py  tts_wav_guard.py  upload.py
src/youdub/steps/transcribe/: __init__.py  asr_run.py  assets.py  compat.py  segments.py  speaker_repair.py  subtitles.py
src/youdub/steps/translate/: __init__.py  backend.py  quality.py  summary.py
src/youdub/steps/tts/: __init__.py  bytedance.py  gemini.py  qwen_worker.py  speaker_ref.py  wav_guard.py
src/youdub/steps/video/: __init__.py  audio.py  subtitles.py
tests/: test_download.py  test_generate_info.py  test_models.py  test_pipeline.py  test_pipeline_required_models.py  test_qwen_tts_integration.py  test_qwen_worker_protocol.py  test_sanity_regressions.py  test_separate_vocals.py  test_speaker_reference.py  test_speech_rate.py  test_syllable_nuclei.py  test_synthesize_speech.py  test_synthesize_video.py  test_text_norm_zh.py  test_torch_load_weights_only_compat.py  test_transcribe.py  test_transcribe_utils.py  test_translate.py  test_translate_strategy_parallel.py  test_translate_utils.py  test_upload.py  test_upload_biliup.py  test_whisper_device_cpu_model.py
tricks/: README.md  adaptive-alignment.md  bgm-align.md  diarization-tuning.md  qwen-tts.md  srt-render.md  translate.md  youtube-srt-align.md
