[project]
name = "youdub-webui"
version = "0.1.0"
description = "Translate and dub YouTube videos to Chinese using AI"
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = { text = "MIT" }
authors = [{ name = "liuzhao1225" }]
keywords = ["youtube", "translation", "dubbing", "ai", "tts", "whisper"]

dependencies = [
    # Web UI
    "gradio",
    "typer>=0.12,<1.0.0",

    # Logging
    "loguru>=0.7.0,<1.0.0",


    # Configuration
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",

    # Video downloading
    "yt-dlp[default,curl-cffi,secretstorage]",
    "curl_cffi",
    "yt-dlp-invidious",
    "bgutil-ytdlp-pot-provider",
    "google-genai>=1.50.0",

    # Audio processing
    "scipy>=1.11.0,<1.14.0",
    "librosa>=0.10.0,<0.11.0",
    "audiostretchy>=1.3.5",
    "soundfile",
    "numpy<2.0.0",

    # Vocal separation (offline / GPU-friendly)
    # Use demucs-infer (actively maintained inference-only Demucs fork).
    "demucs-infer>=4.1.2",

    # Speech recognition (offline / GPU-friendly)
    "faster-whisper>=1.2.1",

    # Speaker diarization (required by bytedance TTS for speaker matching)
    # Note: Keep <4.0.0 for Torchaudio 2.1.x compatibility
    "pyannote.audio>=3.1.0,<4.0.0",

    # Translation API
    "openai>=1.0.0,<2.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "huggingface-hub",

    # Image processing
    "Pillow>=10.0.0,<11.0.0",

    # HTTP requests (for bytedance TTS)
    "requests>=2.31.0,<3.0.0",

    # Bilibili upload
    # Bilibili upload
    "bilibili_toolman",

    # PyTorch ecosystem (CUDA 12.1)
    "torch==2.1.2",
    "torchaudio==2.1.2",
]

[project.optional-dependencies]
# Development dependencies
dev = ["pytest>=7.0.0", "black>=23.0.0", "ruff>=0.1.0"]

[project.scripts]
youdub = "youdub.app:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["youdub*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.black]
line-length = 120
target-version = ["py310"]

# --- UV Package Manager Configuration ---

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu121", marker = "sys_platform == 'linux'" }]
torchaudio = [{ index = "pytorch-cu121", marker = "sys_platform == 'linux'" }]
